# DOCS/openapi.yml
@@ -25,7 +25,7 @@ tags:
     description: Operations about your module
 
 paths:
-  /api/v1/order:
+  /api/v1/orders:
     get:
       tags:
         - order
@@ -108,7 +108,7 @@ paths:
                     properties:
                       message:
                         example: "No order has been placed"
-  /api/v1/order/list:
+  /api/v1/orders/list:
     get:
       tags:
         - order
@@ -156,7 +156,7 @@ paths:
                     properties:
                       message:
                         example: "there is no order list"
-  /api/v1/order/{id}:
+  /api/v1/orders/{id}:
     post:
       tags:
         - order
@@ -550,7 +550,7 @@ paths:
                       message:
                         example: "OTP is invalid."
 
-  /api/v1/module:
+  /api/v1/modules:
     get:
       tags:
         - module
@@ -586,7 +586,7 @@ paths:
                       message:
                         example: "Failed to retrieve the list of Modules"
 
-  /api/v1/chapter/{id}/:
+  /api/v1/chapters/{id}/:
     post:
       tags:
         - module
@@ -638,7 +638,7 @@ paths:
                       message:
                         example: "Failed to Create Module"
 
-  /api/v1/module/{id}:
+  /api/v1/modules/{id}:
     get:
       tags:
         - module
@@ -805,7 +805,7 @@ paths:
                       message:
                         example: "Failed to Delete module by ID: ..."
 
-  /api/v1/chapter:
+  /api/v1/chapters:
     get:
       tags:
         - chapter
@@ -845,7 +845,7 @@ paths:
                       message:
                         example: Failed to retrieve the list of chapter
 
-  /api/v1/course/{id}/:
+  /api/v1/courses/{id}/:
     post:
       tags:
         - chapter
@@ -910,7 +910,7 @@ paths:
                       message:
                         example: Failed to retrieve the list of chapter
 
-  /api/v1/chapter/{id}:
+  /api/v1/chapters/{id}:
     get:
       tags:
         - chapter
@@ -1115,7 +1115,7 @@ paths:
                       message:
                         example: "Failed to delete chapter by ID"
 
-  /api/v1/course:
+  /api/v1/courses:
     get:
       summary: Get a list of course
       tags:
@@ -1255,7 +1255,7 @@ paths:
                       message:
                         example: Failed to retrieve the list of course
 
-  /api/v1/course/{id}:
+  /api/v1/courses/{id}:
     get:
       tags:
         - course
@@ -1731,7 +1731,7 @@ paths:
                       message:
                         example: Failed to create data. Validation error
 
-  /api/v1/my-course:
+  /api/v1/my-courses:
     get:
       tags:
         - user
